consignes importantes pour faire fonctionner le run et voir le gui