@@ -4,4 +4,10 @@
 ### Partie 1 : Setup
 1. Init JavaFx project : memory_game
 2. Creation des classes vides
+   (Utilise memory_game crée a l'aide d'intelliJ si tu veux pas perdre a nouveau du temps avec les prochaines etapes)
+3. Ajout librarie JavaFx au projet deja existant ! (File > Structure Project > Libraries + activate 'lib' on File > Structure Project > Modules)
+4. Configurer la VM pour JavaFX (Run > Edit Configurations > Add VM options : --module-path "C:\Program Files\javafx-sdk-20.0.1\lib" --add-modules=javafx.controls  )
+5. Assurez vous que la version de JavaFX et du SDK sont compatibles (notre cas 20.0.1 et 17) (File>Edit Conf..)
+6. Si t'as utilisé memory_game mets toutes tes classes la bas et travaille dans ce fichier, tu peux t'en passer du 3 4 5)
 
+### Partie 2 : Dev
